--- a/com.TestLeaf/.classpath
+++ b/com.TestLeaf/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/MMA_Automation/NewJars/selenium-server-standalone-3.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
