--- a/com.TestLeaf/config.properties
+++ b/com.TestLeaf/config.properties
@@ -1,4 +1,8 @@
 #Mon Nov 11 15:35:26 IST 2019
+ChromeDriverPath=empty path
+Browser=firefox
+Ashok=Divya
+
 ChromeDriverPath=D\:\\MMA_Automation\\chromedriver.exe
 Browser=chrome
 Ashok=newpandian
