--- a/com.TestLeaf/config.properties
+++ b/com.TestLeaf/config.properties
@@ -1,4 +1,4 @@
 #Mon Nov 11 15:35:26 IST 2019
-ChromeDriverPath=C:\\Projects\\Automation\\chromedriver.exe
+ChromeDriverPath=D:\\MMA_Automation\\chromedriver.exe
 Browser=chrome
 Application=guru99bank
