--- a/com.TestLeaf/test-output/old/TestLeafSuite/Check Test.properties
+++ b/com.TestLeaf/test-output/old/TestLeafSuite/Check Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=TestCases][SuiteResult context=Check Test][SuiteResult context=Guru99Bank]
+[SuiteResult context=TestCases][SuiteResult context=Check Test]
