--- a/com.TestLeaf/.classpath
+++ b/com.TestLeaf/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/selenium-server-standalone-3.13.0.jar"/>
 	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/log4j.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/extentreports-4.0.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
