--- a/com.TestLeaf/.classpath
+++ b/com.TestLeaf/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/selenium-server-standalone-3.13.0.jar"/>
 	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/log4j.jar"/>
 	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/extentreports-4.0.9.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/bson-2.3.jar"/>
+	<classpathentry kind="lib" path="D:/Users/ashokpandian.s/git/TestLeaf-Testing/com.TestLeaf/freemarker-2.3.29.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
